--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ android {
 
 dependencies {
 
+    implementation "androidx.work:work-runtime-ktx:2.10.0"
     implementation 'com.daimajia.androidanimations:library:2.4@aar'
     implementation 'com.squareup.picasso:picasso:2.8'
     implementation "com.github.lisawray.groupie:groupie:2.10.1"
